move existing grace period implementation