@@ -539,8 +539,9 @@ public class ParticipationResource {
                     participation.setSubmissions(null);
                 }
                 else if (participation.getSubmissions() != null && !participation.getSubmissions().isEmpty()) {
-                    participation.setSubmissions(Set.of(participation.getSubmissions().stream().filter(submission -> submission.getType() != SubmissionType.ILLEGAL)
-                            .max(Comparator.naturalOrder()).orElseThrow()));
+                    var lastLegalSubmission = participation.getSubmissions().stream().filter(submission -> submission.getType() != SubmissionType.ILLEGAL)
+                            .max(Comparator.naturalOrder());
+                    participation.setSubmissions(lastLegalSubmission.map(Set::of).orElse(Collections.emptySet()));
                 }
             });
         }
